# qtarootshell

./: CMakeLists.txt
output/include/qtarootshell/: qtarootshell.h
script/: output-cpplib.py
src/: qtarootshell.cpp  qtarootshell.h
